# namegnome

./: .coveragerc  .env.example  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  CURRENT_SCAN.md  DEMO.md  LICENSE  MEDIA-SERVER FILE-NAMING & METADATA GUIDE.md  MVP_CHANGELOG.md  MVP_TASK.md  PLANNING.md  README.md  RECOVERY_PLAN.md  SCAN.md  SCAN_RULES.md  SCAN_TASK.md  TASK.md  TASK_6-26-25.md  conftest.py  debug_fake_orchestrator.py  debug_regex.py  deptry.toml  fetch_tvdb_paw_patrol_episodes.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  e2e.yml  nightly.yml
docs/: KNOWN_ISSUES.md  apply-undo.md  architecture.md  cli-commands.md  e2e-testing.md  fixture-manifest.md  fs-operations.md  hashing.md  integration-testing.md  llm.md  progress-logging.md  providers.md  quickstart.md
namegnome/: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  pytest.ini
namegnome/scripts/: ci_checks.sh
namegnome/src/namegnome/: __about__.py  __main__.py  cli.py
namegnome/src/namegnome/cli/: __init__.py
namegnome/src/namegnome/core/: planner.py  scanner.py
namegnome/src/namegnome/metadata/: utils.py
namegnome/src/namegnome/metadata/clients/: __init__.py  base.py
namegnome/src/namegnome/models/: core.py
namegnome/src/namegnome/rules/: __init__.py  base.py  plex.py
namegnome/tests/: __init__.py  test_version.py
namegnome/tests/core/: test_planner.py
namegnome/tests/fixtures/stubs/tmdb/: movie_details.json
namegnome/tests/metadata/: __init__.py
namegnome/tests/metadata/clients/: __init__.py  test_tmdb.py  test_tvdb.py
namegnome/tests/models/: test_core.py
namegnome/tests/rules/: test_plex.py
scripts/: CI_FIXES.md  check_windows_patterns.sh  ci_checks.sh  debug_windows_tests.sh  sync_paw_patrol_mocks.py
src/namegnome/: __about__.py  __init__.py  __main__.py
src/namegnome/cli/: __init__.py  commands.py  console.py  renderer.py  scanner.py
src/namegnome/cli/utils/: ascii_art.py  prompt_utils.py
src/namegnome/core/: __init__.py  apply.py  episode_parser.py  fuzzy_matcher.py  plan_builders.py  plan_conflicts.py  planner.py  scanner.py  segment_splitter.py  tv_planner.py  undo.py  utils.py
src/namegnome/core/tv/: episode_parser.py  fallbacks.py  matching.py  plan_conflicts.py  plan_helpers.py  plan_orchestration.py  segment_splitter.py  tv_plan_context.py  tv_rule_config.py  utils.py
src/namegnome/core/tv/anthology/: tv_anthology_helpers.py  tv_anthology_log.py  tv_anthology_split.py
src/namegnome/fs/: __init__.py  operations.py  storage.py
src/namegnome/llm/: __init__.py  ollama_client.py  prompt_orchestrator.py
src/namegnome/metadata/: __init__.py  base.py  cache.py  episode_fetcher.py  models.py  musicbrainz_client.py  settings.py  utils.py
src/namegnome/metadata/clients/: __init__.py  base.py  fanarttv.py  omdb.py  theaudiodb.py  tmdb.py  tvdb.py
src/namegnome/metadata/clients/anilist/: __init__.py  client.py
src/namegnome/models/: __init__.py  core.py  plan.py  scan.py
src/namegnome/prompts/: __init__.py  anthology.j2  id_hint.j2  prompt_loader.py  title_guess.j2
src/namegnome/rules/: base.py  plex.py
src/namegnome/utils/: __init__.py  config.py  debug.py  hash.py  json.py  plan_store.py
tests/: __init__.py  test_env_example.py  test_version.py  utils.py
tests/cli/: test_cli_utils_hotspot.py  test_commands.py  test_commands_extra_hotspot.py  test_completion.py  test_config_docs.py  test_console_manager.py  test_help_snapshot.py  test_renderer.py  test_scan_command.py  test_tv_scan_integration.py  test_undo_cli.py  test_visuals.py
tests/cli/fixtures/: help_root.txt  help_scan.txt  help_undo.txt
tests/core/: test_apply.py  test_episode_parser_hotspot.py  test_fuzzy_matcher_hotspot.py  test_plan_conflict_hotspot.py  test_planner.py  test_scanner.py  test_undo.py
tests/core/tv/: test_plan_conflict_hotspot.py  test_plan_orchestration.py  test_plan_orchestration_helpers_hotspot.py  test_tv_anthology_canonical_flow_hotspot.py  test_tv_anthology_split_additional.py  test_tv_anthology_split_hotspot.py  test_tv_matching_hotspot.py  test_tv_planner_helpers_hotspot.py  test_tv_planner_item_hotspot.py  test_tv_planner_misc_hotspot.py  test_tv_token_match_hotspot.py  test_tv_utils_hotspot.py
tests/docs/: test_providers_md.py
tests/e2e/: __init__.py  conftest.py  test_real_tv_scan.py
tests/e2e/fixtures/omdb/: search_danger_mouse.json
tests/e2e/fixtures/tmdb/: search_danger_mouse.json  season_danger_mouse.json
tests/e2e/fixtures/tvdb/: episodes_danger_mouse.json  search_danger_mouse.json
tests/fixtures/stubs/tvdb/: tv_details.json
tests/fs/: __init__.py  test_operations.py  test_storage.py
tests/helpers/: __init__.py  fake_prompt_orchestrator.py  test_fake_prompt_orchestrator.py
tests/integration/: test_provider_fallback.py  test_show_recognition_hotspot.py  test_tv_scan_regression.py  test_unsupported_inputs.py
tests/llm/: test_confidence_chain_hotspot.py  test_ollama_client.py  test_prompt_builders_hotspot.py  test_prompt_orchestrator.py  test_prompt_orchestrator_cases_hotspot.py  test_prompt_orchestrator_hotspot.py  test_prompt_orchestrator_llm_hotspot.py  test_prompt_orchestrator_parsing_more_hotspot.py
tests/metadata/: test_base.py  test_cache.py  test_episode_fetcher_hotspot.py  test_factory.py  test_omdb_client.py  test_provider_fallback.py  test_provider_health.py  test_utils_hotspot.py
tests/metadata/clients/: test_anilist.py  test_fanarttv.py  test_musicbrainz.py  test_theaudiodb.py  test_tmdb.py  test_tvdb.py
tests/mocks/tv/: TV_Test_Expectations.md  fixture_manifest.yaml
tests/models/: test_core.py
tests/prompts/: __init__.py  test_prompt_loader.py  test_prompt_templates.py
tests/regression/: test_cache_regression.py  test_conflict_duplicate_dest.py
tests/rules/: test_plex.py
tests/utils/: test_config_and_debug_hotspot.py  test_config_resolve.py  test_hash.py  test_plan_store.py  test_plan_store_hotspot.py
tests/windows/: test_cli_windows_smoke.py
(+3 files in other folders)
