[tool.poetry]
name = "namegnome"
version = "0.1.0"
description = "A tool to analyze, rename and reorganize media files for media servers"
authors = ["DouglasMacKrell <d.mackrell@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DouglasMacKrell/namegnome"
keywords = ["media", "rename", "organize", "plex", "jellyfin", "emby"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
click = "8.1.8"
httpx = "0.28.1"
jinja2 = ">=3.1.0"
pydantic = ">=2.0.0"
pydantic-settings = "*"
rich = ">=13.3.5"
typer = "0.15.3"
types-requests = "*"
deptry = "*"
mypy = "*"
tomli = "*"
tomli-w = "*"
python-dotenv = ">=1.0.0,<2.0.0"
rapidfuzz = ">=3.13.0"
respx = "0.22.0"
nltk = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
pytest = "*"
pytest-cov = "*"
pre-commit = "*"
pytest-asyncio = "*"
pytest-mock = "*"
respx = "*"
types-requests = "*"
types-PyYAML = "*"

# Expose the same developer dependencies as an installable "dev" extra so
# that installation via classic `pip install -e ".[dev]"` (used by CI)
# pulls them in even outside of Poetry. This keeps CI lightweight without
# requiring a Poetry runtime while ensuring the right tooling is present.
[tool.poetry.extras]
dev = [
  "black",
  "ruff",
  "pytest",
  "pytest-cov",
  "pre-commit",
  "pytest-asyncio",
  "pytest-mock",
  "respx",
  "types-requests",
  "types-PyYAML",
]
